[fix]remove unnecessary white space

--- a/style/home.scss
+++ b/style/home.scss
@@ -3,7 +3,7 @@
 .home {
   font-family: $core_font;
   margin: 0 auto;
-  margin-top: 100vh;
+//   margin-top: 100vh;
   width: 300px;
 
   .sorters {
